--- a/includes/css/stylo.css
+++ b/includes/css/stylo.css
@@ -1,6 +1,6 @@
 
 .navbar{
-	 background-color: black;
+	 background-color:  black;
 }
 .navbar-brand img{
 
@@ -29,7 +29,7 @@
 	color:black;
 }
 body{
-	background-color:black;
+	background-color: black;
 }
 #myCarousel {
     margin-top:160px;
@@ -64,7 +64,7 @@ body{
   
 }
 #slide1 .carousel-caption{
-	color:black;
+	color: ;
 	font-family:comic;
 	margin-left:-800px;
 }
@@ -141,7 +141,7 @@ body{
 }
 
 #bigCallout .well{
-	background-color:black;
+	background-color: black;
 	border :1px solid black;
 }
 
@@ -196,7 +196,7 @@ body{
 
 
 .panel{
-	background-color: black;
+	background-color:  black;
 	text-align: center;
 	color:orange;
 	border:1px solid black;
@@ -204,20 +204,25 @@ body{
 .panel img{
 	border-radius: 25px;
 }
-
+.btn btn-warning{
+  color: black;
+  background-color:orange;
+}
 
 footer{
   background-color: black;
-  float:bottom;
   position:absolute;
+  float:bottom;
   width :100%;
   height:220px;
+  border-top :1px solid #e3e3e3;
+
 
 }
 form{
   width:200px;
   margin-left:50px;
-  color:grey;
+  color:#e3e3e3;
   border-radius: 1px solid black;
 }
 #first{
@@ -262,4 +267,7 @@ form{
 }
 #bottomline{
 	padding: 50px 30px;
+}
+#contact{
+  color:#e3e3e3;
 }
